--- a/styles/bundle.css
+++ b/styles/bundle.css
@@ -369,24 +369,57 @@ p {
   .nix input[type="color"]:active, .nix input[type="date"]:active, .nix input[type="datetime"]:active, .nix input[type="datetime-local"]:active, .nix input[type="email"]:active, .nix input[type="month"]:active, .nix input[type="number"]:active, .nix input[type="password"]:active, .nix input[type="search"]:active, .nix input[type="tel"]:active, .nix input[type="text"]:active, .nix input[type="time"]:active, .nix input[type="url"]:active, .nix input[type="week"]:active, .nix input:not([type]):active, .nix textarea:active {
     border: 1px solid #00f; }
 
-.header {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  height: 60px;
-  box-sizing: border-box;
-  background-color: white;
-  padding: 13px 25px; }
-
 .header__logo {
-  line-height: 20px;
+  background-color: white;
+  background-color: rgba(255, 255, 255, 0.65);
+  display: block;
   font-size: 3.2rem;
-  position: relative;
-  left: -2px; }
+  line-height: 20px;
+  padding: 0.5em 1.0em 0.25em 1.0em;
+  text-align: center;
+  width: 100%; }
+  @media screen and (min-width: 1020px) {
+    .header__logo {
+      text-align: left; } }
+  .header__logo svg {
+    height: 48px;
+    margin: 0 0.5em; }
 
-.header__tagline {
+.header__lead {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  font-size: 2.7rem;
   font-style: italic;
-  margin-top: 3px; }
+  justify-content: flex-end;
+  line-height: 30px;
+  margin-top: 3px;
+  max-width: 600px;
+  padding: 30px 0.5em;
+  text-align: center;
+  text-shadow: 0 1px 2px #2d426b; }
+  @media screen and (min-width: 1020px) {
+    .header__lead {
+      font-size: 4.2rem;
+      line-height: 50px;
+      max-width: 768px; } }
+
+header {
+  align-items: center;
+  height: 360px;
+  background-image: url("../images/splash/beach2-wide-dark.jpg");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column; }
+  @media screen and (min-width: 1020px) {
+    header {
+      height: 480px; } }
+  @media screen and (min-width: 1400px) {
+    header {
+      height: 600px; } }
 
 .nix {
   -webkit-box-sizing: border-box;
@@ -420,43 +453,6 @@ p {
     color: #86E86B; }
   .section--dark label, .section--dark li, .section--dark p {
     color: white; }
-
-.product__banner {
-  box-sizing: border-box;
-  width: 100%;
-  padding-left: 25px;
-  padding-right: 25px;
-  height: 240px;
-  background-image: url("/images/windy-road.png");
-  background-position: center top;
-  background-repeat: no-repeat;
-  background-size: cover; }
-  .product__banner .product-banner__name {
-    margin-top: 60px;
-    text-align: center;
-    font-size: 5.4rem;
-    line-height: 60px;
-    color: white; }
-  .product__banner .product-banner__tagline {
-    text-align: center;
-    font-size: 2.1rem;
-    line-height: 20px;
-    color: white; }
-  @media screen and (min-width: 760px) {
-    .product__banner {
-      height: 360px;
-      background-position: center -40px; }
-      .product__banner .product-banner__name {
-        margin-top: 180px; } }
-  @media screen and (min-width: 1020px) {
-    .product__banner {
-      height: 480px;
-      background-position: center top; }
-      .product__banner .product-banner__name {
-        margin-top: 300px; } }
-  @media screen and (min-width: 1400px) {
-    .product__banner {
-      height: 600px; } }
 
 .product__mailinglist {
   box-sizing: border-box;
