--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -46,6 +46,7 @@
 header {
   align-items: center;
   height: $row * 6;
+  background-color: $clr-primary;
   background-image: url('../images/splash/beach2-wide-dark.jpg');
   background-position: center top;
   background-repeat: no-repeat;
