--- a/sass/defaults/tags.scss
+++ b/sass/defaults/tags.scss
@@ -2,6 +2,14 @@
 @import 'mixins';
 
 
+body {
+    overflow-x: hidden;
+}
+
+html {
+    background-color: $clr-secondary;
+}
+
 img {
     max-width: 100%;
 }
