--- a/styles/bundle.css
+++ b/styles/bundle.css
@@ -506,6 +506,9 @@ header {
     padding-left: 25px;
     padding-right: 25px;
     cursor: pointer; }
+  .mailinglist__form label {
+    position: absolute;
+    left: -9999px; }
 
 .mailinglist__label {
   box-sizing: border-box;
