--- a/sass/defaults/vars.scss
+++ b/sass/defaults/vars.scss
@@ -19,6 +19,7 @@ $clr-secondary-lt: #86E86B;
 $clr-body: #524B47;
 $clr-hyperlink: #009FD6;
 $clr-hyperlink-lt: #50CAF2;
+$clr-black: #000000;
 
 
 // Type
