--- a/styles/bundle.css
+++ b/styles/bundle.css
@@ -552,20 +552,26 @@ header {
       padding-left: 25px;
       padding-right: 25px; } }
 
-.details__features {
+.details__preview {
   box-sizing: border-box;
   width: 100%;
   padding-left: 25px;
-  padding-right: 25px; }
+  padding-right: 25px;
+  padding: 20px;
+  text-align: center; }
   @media screen and (min-width: 1020px) {
-    .details__features {
+    .details__preview {
       box-sizing: border-box;
       width: 58.33333%;
       padding-left: 25px;
-      padding-right: 25px; } }
-  .details__features h4 {
-    margin-top: 8px;
-    margin-bottom: 2px; }
+      padding-right: 25px;
+      text-align: left; } }
+  .details__preview img {
+    box-shadow: 0 3px 3rem rgba(0, 0, 0, 0.15);
+    max-width: 768px;
+    width: 100%; }
+    .details__preview img:hover {
+      box-shadow: 0 3px 3rem rgba(0, 0, 0, 0.35); }
 
 .about {
   padding-top: 20px;
